<?xml version="1.0"?>
<package>
  <name>dbc_converter</name>
  <version>1.0.0</version>
  <description>dbc file converter</description>

  <maintainer email="ji.han@tusimple.ai">Yue</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>roslaunch</build_depend>
  <build_depend>middleware</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend> -->

  
</package>
